--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -26,7 +26,7 @@
     </div>
     <div class="col col-lg-6 col-md-12">
       <div>
-        <h1>Google map</h1>
+        <div #mapContainer id="map"></div>
       </div>
     </div>
   </div>
